# 65k-cpp

./: .clang-format  .clang-format-ignore  .clang-tidy-ignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  cpp-lint.sh
.github/workflows/: cmake-single-platform.yml
dependencies/: CMakeLists.txt
docker/: Dockerfile
emulator/: CMakeLists.txt  emulator.cpp
emulator_app/: CMakeLists.txt  main.cpp
profiler/: CMakeLists.txt  profiler.cpp
scripts/: gather_cov.sh
tests/: CMakeLists.txt  and_absolute_indexed_tests.cpp  and_absolute_tests.cpp  and_immediate_tests.cpp  and_indexed_indirect_tests.cpp  and_indirect_indexed_tests.cpp  and_zeropage_indexed_tests.cpp  and_zeropage_tests.cpp  asl_tests.cpp  bit_tests.cpp  branch_tests.cpp  cmp_tests.cpp  common.h  cpx_tests.cpp  cpy_tests.cpp  emulator_tests.cpp  eor_absolute_indexed_tests.cpp  eor_absolute_tests.cpp  eor_immediate_tests.cpp  eor_indexed_indirect_tests.cpp  eor_indirect_indexed_tests.cpp  eor_zeropage_indexed_tests.cpp  eor_zeropage_tests.cpp  flags_tests.cpp  increment_tests.cpp  jmp_tests.cpp  ld_absolute_indexed_tests.cpp  ld_absolute_tests.cpp  ld_immediate_tests.cpp  ld_index_indirect_tests.cpp  ld_indirect_indexed_tests.cpp  ld_tests.cpp  ld_zeropage_indexed_tests.cpp  ld_zeropage_tests.cpp  lsr_tests.cpp  nop_tests.cpp  or_immediate_tests.cpp  ora_absolute_indexed_tests.cpp  ora_absolute_tests.cpp  ora_immediate_tests.cpp  (+15 more)
ui/: CMakeLists.txt  common.cpp  flags_table.cpp  register_table.cpp
